--- a/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/Screens/AddTab.xaml
+++ b/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/Screens/AddTab.xaml
@@ -14,8 +14,8 @@
         </WrapPanel>
 
         <Grid DockPanel.Dock="Bottom" VerticalAlignment="Bottom" Height="100">
-            <Button x:Name="btn_cancel" Content="Cancel" HorizontalAlignment="Left" VerticalAlignment="Bottom" Height="100"  Width="400" Click="btn_cancel_Click"  Background="{x:Null}" Foreground="#FFEE516C" BorderBrush="{x:Null}" FontSize="26.667" RenderTransformOrigin="0.046,1.474"/>
-            <Button x:Name="btn_submit" Content="Submit" HorizontalAlignment="Right" VerticalAlignment="Bottom" Height="100"  Width="400" Background="{x:Null}" Foreground="#FF00BB97" BorderBrush="{x:Null}" FontSize="26.667" Click="btn_submit_Click"/>
+            <Button x:Name="btn_cancel" Content="Cancel" HorizontalAlignment="Left" VerticalAlignment="Bottom" Height="100"  Width="400" Click="btn_cancel_Click"  Background="#04577c" Foreground="#FFEE516C" BorderBrush="{x:Null}" FontSize="26.667" RenderTransformOrigin="0.046,1.474"/>
+            <Button x:Name="btn_submit" Content="Submit" HorizontalAlignment="Right" VerticalAlignment="Bottom" Height="100"  Width="400" Background="#04577c" Foreground="#FF00BB97" BorderBrush="{x:Null}" FontSize="26.667" Click="btn_submit_Click"/>
         </Grid>
         <Label x:Name="lbl_title" Content="New Tab" HorizontalAlignment="Stretch"  HorizontalContentAlignment="Center" VerticalAlignment="Top" FontSize="64" Foreground="White" FontFamily="Segoe UI Light" Background="{x:Null}"/>
         <Separator HorizontalAlignment="Stretch" Height="1" Margin="0,0,0,100" VerticalAlignment="Bottom" Background="#FF344D61"/>
