--- a/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/Screens/MainScreen.xaml
+++ b/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/Screens/MainScreen.xaml
@@ -17,8 +17,8 @@
 
         </StackPanel>
             <Grid x:Name="main" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="75,0,0,0" Background="#FFF4F4F4">
-            <local:Page_Holder x:Name="Page_Holder" VerticalAlignment="Top" Margin="10,10,10,118" HorizontalAlignment="Center" />
-            <Rectangle Fill="#FF213F57" HorizontalAlignment="Stretch" Height="108" VerticalAlignment="Bottom" StrokeThickness="0" Margin="10,0,311,0" RadiusX="3" RadiusY="3" />
+                <local:Page_Holder x:Name="Page_Holder" VerticalAlignment="Top" Margin="10,10,10,118" HorizontalAlignment="Center" />
+                <Rectangle Fill="#FF213F57" HorizontalAlignment="Stretch" Height="108" VerticalAlignment="Bottom" StrokeThickness="0" Margin="10,0,311,0" RadiusX="3" RadiusY="3" />
 
             <WrapPanel HorizontalAlignment="Center" Height="104"  VerticalAlignment="Bottom" Width="420" Margin="268,0,529,0">
                 
@@ -53,21 +53,27 @@
                     <DropShadowEffect ShadowDepth="1" Opacity="0.25"/>
                 </Button.Effect>
             </Button>
-            <StackPanel x:Name="stack_sidePanel" HorizontalAlignment="Right" Height="308" Width="300" Background= "#FFF4F4F4" VerticalAlignment="Bottom" Margin="0,0,0,108" Visibility="Collapsed">
-                <StackPanel.Effect>
-                    <DropShadowEffect ShadowDepth="1" Opacity="0.25"/>
-                </StackPanel.Effect>
-                <Label x:Name="lbl_queueItem5" Content="Current Order" HorizontalContentAlignment="Left" Height="48" Width="300" FontSize="24" Background="White" BorderThickness="0,0,0,3" BorderBrush="#FFF4F4F4" Foreground="#FF4F4F4F" FontFamily="Segoe UI Light" />
-                <Label x:Name="lbl_queueItem4" Content="Coke                                $2.50" HorizontalContentAlignment="Left" Height="38" Width="300" FontSize="21" Background="White" BorderThickness="0,0,0,3" BorderBrush="#FFF4F4F4" Foreground="#FF4F4F4F" />
-                <Label x:Name="lbl_queueItem3" Content="Rustic Red                       $6.50" HorizontalContentAlignment="Left" Height="38" Width="300" FontSize="21" Background="White" BorderThickness="0,0,0,3" BorderBrush="#FFF4F4F4" Foreground="#FF4F4F4F" />
-                <Label x:Name="lbl_queueItem2" Content="Maple Cream                  $6.50" HorizontalContentAlignment="Left" Height="38" Width="300" FontSize="21" Background="White" BorderThickness="0,0,0,3" BorderBrush="#FFF4F4F4" Foreground="#FF4F4F4F" />
-                <Label x:Name="lbl_queueItem1" Content="Nut Brown                      $6.50" HorizontalContentAlignment="Left" Height="38" Width="300" FontSize="21" Background="White" BorderThickness="0,0,0,3" BorderBrush="#FFF4F4F4" Foreground="#FF4F4F4F" />
-                <Grid HorizontalAlignment="Right" Height="108" VerticalAlignment="Bottom" Width="300" Background="White">
+                
+            <!--Queue-->    
+            <Grid x:Name="grid_queue" HorizontalAlignment="Right" Height="305" Width="300" Background= "#FFF4F4F4" VerticalAlignment="Bottom" Margin="0,0,0,108" Visibility="Collapsed">
+                    <Label Content="Current Order" HorizontalContentAlignment="Left" VerticalAlignment="Top" Height="45" Width="300" FontSize="24" Background="White" BorderThickness="0,0,0,1" BorderBrush="#FFF4F4F4" Foreground="#FF4F4F4F" FontFamily="Segoe UI Light" />
+                
+                    <!-- Item Name-->
+                    <StackPanel  x:Name="sp_item_names" HorizontalAlignment="Left" Height="260" Width="200" Background= "White" VerticalAlignment="Bottom" />
 
-                    <Label x:Name="lbl_queueTotal" Content="Total: $22.00" HorizontalAlignment="Left" VerticalAlignment="Center" HorizontalContentAlignment="Center" Height="62" Width="200" FontSize="34" Background="{x:Null}" BorderThickness="0,0,2,0" Foreground="#FF4F4F4F" FontFamily="Segoe UI Light" />
-                    <Button x:Name="lbl_submitQueue" Content="Submit Order" HorizontalAlignment="Right" VerticalAlignment="Stretch" HorizontalContentAlignment="Center" Width="100" FontSize="14" Background="#FF213F57" BorderThickness="0" BorderBrush="{x:Null}" Foreground="#FFB5BEC7" />
+                    <!-- Item Quantity-->
+                    <StackPanel  x:Name="sp_item_quantity" HorizontalAlignment="Left" Height="260" Width="50" Background= "White" VerticalAlignment="Bottom" Margin="200,0,0,0" />
+
+                    <!-- Item Price-->
+                    <StackPanel  x:Name="sp_item_prices" HorizontalAlignment="Right" Height="260" Width="50" Background= "White" VerticalAlignment="Bottom" />
+
+
+                    <Grid HorizontalAlignment="Right" Height="108" VerticalAlignment="Bottom" Width="300" Background="White">
+
+                    <Label x:Name="lbl_queueTotal" Content="Total: $0.00" HorizontalAlignment="Left" VerticalAlignment="Center" HorizontalContentAlignment="Center" Height="62" Width="200" FontSize="34" Background="{x:Null}" Foreground="#FF4F4F4F" FontFamily="Segoe UI Light" />
+                    <Button x:Name="lbl_submitQueue" Content="Submit Order" HorizontalAlignment="Right" VerticalAlignment="Stretch" HorizontalContentAlignment="Center" Width="100" FontSize="14" Background="#FF213F57" BorderThickness="0" BorderBrush="{x:Null}" Foreground="#FFB5BEC7" Click="btn_submitQueue_Click" />
                 </Grid>
-            </StackPanel>
+            </Grid>
 
 
             <Grid x:Name="grid_summary" HorizontalAlignment="Right" Height="108" VerticalAlignment="Bottom" Width="300" Background="Black">
