--- a/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/Screens/ExamineItemScreen.xaml
+++ b/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/Screens/ExamineItemScreen.xaml
@@ -13,10 +13,12 @@
             <Image x:Name="image" HorizontalAlignment="Left" Height="135" VerticalAlignment="Top" Width="135" 
                 Margin="10,61,0,0" Source="/Resources/Images/beer.png"/>
         </Border>
-        <Label x:Name="lbl_quantity" Height="30" Content="Quantity:  " HorizontalAlignment="Left" Margin="298,216,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="14"/>
-        <TextBlock x:Name="tb_numItems" HorizontalAlignment="Left" Height="30" Margin="388,216,0,0" TextWrapping="Wrap" Text="1" VerticalAlignment="Top" Width="37" FontSize="21.333" TextAlignment="Center"/>
-        <Button x:Name="btn_decrease" Content="&#xE012;" HorizontalAlignment="Left" Margin="360,216,0,0" VerticalAlignment="Top" Width="25" Height="30" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontFamily="Segoe UI Symbol" FontSize="18.667" Background="{x:Null}" BorderBrush="{x:Null}" Click="btn_decrease_Click"/>
-        <Button x:Name="btn_increase" Content="&#xE013;" HorizontalAlignment="Left" Margin="429,216,0,0" VerticalAlignment="Top" Width="25" Height="30" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontFamily="Segoe UI Symbol" FontSize="18.667" BorderBrush="{x:Null}" Background="{x:Null}" Click="btn_increase_Click"/>
+            <WrapPanel Height="32" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,0,30">
+                <Label x:Name="lbl_quantity"  Content="Quantity: " FontSize="14"/>
+                <Button x:Name="btn_decrease" Content="&#xE012;" Width="25" FontFamily="Segoe UI Symbol" FontSize="18.667" Background="{x:Null}" BorderBrush="{x:Null}" Click="btn_decrease_Click"/>
+                <TextBlock x:Name="tb_numItems" TextWrapping="Wrap" Text="1" VerticalAlignment="Top" Width="37" FontSize="21.333" TextAlignment="Center"/>
+                <Button x:Name="btn_increase" Content="&#xE013;" Width="25" FontFamily="Segoe UI Symbol" FontSize="18.667" BorderBrush="{x:Null}" Background="{x:Null}" Click="btn_increase_Click"/>
+            </WrapPanel>
         <Button x:Name="btn_addToTray" Content="Add to tray" HorizontalAlignment="Left" Margin="301,252,0,0" VerticalAlignment="Top" Width="153" Height="30"  HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Click="btn_addToTray_Click" Background="#FF00BB97" Foreground="White" FontFamily="Segoe UI Light" FontSize="14"/>
         <TextBlock x:Name="tb_description" HorizontalAlignment="Left" Height="115" Margin="168,61,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="272" Text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec maximus mi vel malesuada sollicitudin. Suspendisse in cursus ex. Cras placerat in diam sodales pellentesque. Nulla lacinia nunc commodo neque tristique varius. Fusce iaculis euismod mattis. In quis lacus elit. Phasellus vitae placerat mi."/>
         <Button x:Name="btn_close" Content="&#xE10A;"  VerticalAlignment="Top" HorizontalAlignment="Right" Width="30" Height="30" FontFamily="Segoe UI Symbol" FontSize="18.667" BorderBrush="{x:Null}" Background="{x:Null}" Foreground="#FFEE516C" Click="btn_close_Click"/>
