--- a/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/Screens/MainScreen.xaml
+++ b/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/Screens/MainScreen.xaml
@@ -58,7 +58,7 @@
             <Grid x:Name="grid_queue" HorizontalAlignment="Right" Height="400" Width="340" Background= "#FFF4F4F4" VerticalAlignment="Bottom" Margin="0,0,0,108" Visibility="Hidden">
                     <Label Content="Current Order" HorizontalContentAlignment="Left" VerticalAlignment="Top" Height="45" Width="340" FontSize="24" Background="White" BorderThickness="0,0,0,1" BorderBrush="Gray" Foreground="#FF4F4F4F" FontFamily="Segoe UI Light" />
 
-                    <ScrollViewer Margin="0,45,0,108" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Hidden" Background="White" ScrollChanged="ScrollViewer_ScrollChanged">
+                    <ScrollViewer Margin="0,45,0,108" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Hidden" Background="White" ScrollChanged="ScrollViewer_ScrollChanged" PanningMode="VerticalOnly" ManipulationBoundaryFeedback="ScrollViewer_ManipulationBoundaryFeedback">
                         <!-- Item tray-->
                         <StackPanel  x:Name="sp_tray" HorizontalAlignment="Left" Width="340" Background= "White" VerticalAlignment="Top" />
                     </ScrollViewer>
